# traversability_generator3d

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  README_8md.html  SoilNode_8hpp.html  SoilNode_8hpp_source.html  SoilSample_8hpp.html  SoilSample_8hpp_source.html  TravGenNode_8hpp.html  TravGenNode_8hpp_source.html  TravMapBfsVisitor_8hpp.html  TravMapBfsVisitor_8hpp_source.html  TraversabilityConfig_8hpp.html  TraversabilityConfig_8hpp_source.html  TraversabilityGenerator3d_8cpp.html  TraversabilityGenerator3d_8hpp.html  TraversabilityGenerator3d_8hpp_source.html  annotated.html  classes.html  classtraversability__generator3d_1_1SoilSample-members.html  classtraversability__generator3d_1_1SoilSample.html  classtraversability__generator3d_1_1TravMapBfsVisitor-members.html  classtraversability__generator3d_1_1TravMapBfsVisitor.html  classtraversability__generator3d_1_1TraversabilityConfig-members.html  classtraversability__generator3d_1_1TraversabilityConfig.html  classtraversability__generator3d_1_1TraversabilityGenerator3d-members.html  classtraversability__generator3d_1_1TraversabilityGenerator3d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_type.html  index.html  manifest.xml  menudata.js  (+14 more)
.github/workflows/: c-cpp.yml  docs.yml  draft-pdf.yml
gui/: CMakeLists.txt  Main.cpp  TraversabilityGenerator3dGui.cpp  TraversabilityGenerator3dGui.hpp
gui/config/: parameters.yaml
paper/: paper.bib  paper.md
scripts/: soil_map_viz.rb  vizkit_widget.ui  widget.ui
scripts/python/: foot_steps.py  joint_distribution.py  joint_distribution_3d.py
source_dependencies/: CMakeLists.txt  env.sh  install_os_dependencies.bash
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  SoilNode.hpp  SoilSample.hpp  TravGenNode.hpp  TravMapBfsVisitor.hpp  TraversabilityConfig.hpp  TraversabilityGenerator3d.cpp  TraversabilityGenerator3d.hpp
test/: CMakeLists.txt  test_Dummy.cpp  test_TraversabilityGenerator3d.cpp  test_travgen.cpp  travgen3d_walkthrough.cpp
viz/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.hpp  SoilMap3dVisualization.cpp  SoilMap3dVisualization.hpp  TravMap3dVisualization.cpp  TravMap3dVisualization.hpp  traversability_generator3d-viz-qt5.pc.in  traversability_generator3d-viz.pc.in  vizkit_plugin.rb
